# CameraCooler

./: .hgignore
bootloader/: CMakeLists.txt  bootloaderconfig.h  main.c
firmware/: CMakeLists.txt  main.c  run.bat  usbconfig.h
firmware/adc/: adc.c  adc.h
firmware/bme280/: bme280_user.c  bme280_user.h
firmware/common/: definitions.h  runtime_info.h  settings.h
firmware/cooler/: cooler.c  cooler.h
firmware/i2c/: i2c.c
firmware/pid/: pid.c  pid.h
gui/: App.xaml  App.xaml.cs  CameraCoolerGUI.csproj  CameraCoolerGUI.sln  Device.cs  MainWindow.xaml  MainWindow.xaml.cs  NumberExtension.cs  RealtimeInfo.cs  Result.cs  Settings.cs  packages.config
gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
gui/Resources/: lang.xaml
pcb/: ReadMe.txt  camera-cooler.lay6  dc-dc-converter.lay6
